--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link th:href="@{/css/bootstrap.css}" rel="stylesheet" href="../static/css/bootstrap.css"/>
+
+    <script th:href="@{/js/bootstrap.js}" src="../static/js/bootstrap.js"></script>
+    <script th:href="@{/js/jquery.js}" src="../static/js/jquery.js"></script>
+    
     <title>Document</title>
 </head>
-<body>
-    <h1>Hello Word</h1>
-    <h1>Hello Word</h1>
-</body>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary bg-body-tertiary" >
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Galeria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Post</a>
+                        </li>                    
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container">
+            <div class="row">
+                <div th:each="poster : ${poster}"  class="col-3">
+                    <div class="card" style="width: 18rem; margin-top: 10%;">
+                        <img th:src="@{poster.urlImag}" src="../static/img/poster.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 th:text="@{poster.title}" class="card-title"></h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+
+        <div class="container" style="margin-top: 5%;">
+            <nav aria-label="...">
+                <ul class="pagination">
+                  <li class="page-item disabled">
+                    <a class="page-link">Previous</a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="#">1</a></li>
+                  <li class="page-item active" aria-current="page">
+                    <a class="page-link" href="#">2</a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                  <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                  </li>
+                </ul>
+            </nav>
+        </div>
+        
+    </body>
 </html>
